Bug 219036 - Plasma-desktop crashes on network connect because of weather widget [deref, QString::~QString, ~ForecastInfo]
Summary: Plasma-desktop crashes on network connect because of weather widget [deref, ...
Status: RESOLVED FIXED
Alias: None
Product: plasma4
Classification: Unmaintained
Component: widget-weather (other bugs)
Version First Reported In: unspecified
Platform: openSUSE Linux
: NOR crash
Target Milestone: ---
Assignee: Plasma Bugs List
URL:
Keywords:
: 220164 220795 220820 221308 221647 222116 223538 224222 224330 224483 224539 224985 228231 228728 229161 (view as bug list)
Depends on:
Blocks:
 
Reported: 2009-12-17 10:28 UTC by Thomas Richard
Modified: 2010-03-09 21:34 UTC (History)
22 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
New crash information added by DrKonqi (4.23 KB, text/plain)
2010-02-10 00:06 UTC, Aurelien Gateau
Details
New crash information added by DrKonqi (6.23 KB, text/plain)
2010-02-23 18:43 UTC, Gaetano
Details
New crash information added by DrKonqi (12.50 KB, text/plain)
2010-03-09 21:34 UTC, Stiliyan Sabchev
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Thomas Richard 2009-12-17 10:28:46 UTC
Application: plasma-desktop (0.3)
KDE Platform Version: 4.3.82 (KDE 4.3.82 (KDE 4.4 >= 20091211)) "release 1"
Qt Version: 4.6.1
Operating System: Linux 2.6.31.5-0.1-desktop x86_64
Distribution: "openSUSE 11.2 (x86_64)"

-- Information about the crash:
Every time after I've suspended my notebook (to RAM) and wake it up again plasma crashes when the system makes connection to a network. I think this is caused by the weather engine's updates for some reason. 

I didn't notice this behaviour in KDE Platform 4.3

The crash can be reproduced everytime.

 -- Backtrace:
Application: Plasma Workspace (kdeinit4), signal: Segmentation fault
[Current thread is 1 (Thread 0x7f5a5070e7f0 (LWP 16317))]

Thread 2 (Thread 0x7f5a2d00a910 (LWP 16318)):
#0  0x00007f5a4e99c049 in pthread_cond_wait@@GLIBC_2.3.2 () from /lib64/libpthread.so.0
#1  0x00007f5a4ec272bb in wait (time=<value optimized out>, this=<value optimized out>) at thread/qwaitcondition_unix.cpp:87
#2  QWaitCondition::wait (time=<value optimized out>, this=<value optimized out>) at thread/qwaitcondition_unix.cpp:159
#3  0x00007f5a4d41f13c in QHostInfoAgent::run (this=0xd84470) at kernel/qhostinfo.cpp:252
#4  0x00007f5a4ec26305 in QThreadPrivate::start (arg=0xd84470) at thread/qthread_unix.cpp:244
#5  0x00007f5a4e99765d in start_thread () from /lib64/libpthread.so.0
#6  0x00007f5a4d79114d in clone () from /lib64/libc.so.6
#7  0x0000000000000000 in ?? ()

Thread 1 (Thread 0x7f5a5070e7f0 (LWP 16317)):
[KCrash Handler]
#5  deref (this=<value optimized out>) at /usr/include/QtCore/qatomic_x86_64.h:133
#6  QString::~QString (this=<value optimized out>) at /usr/include/QtCore/qstring.h:869
#7  0x00007f5a2a767684 in ~ForecastInfo (this=<value optimized out>, __in_chrg=<value optimized out>)
    at /usr/src/debug/kdebase-workspace-4.3.82svn1062329/plasma/generic/dataengines/weather/ions/bbcukmet/ion_bbcukmet.h:63
#8  UKMETIon::reset (this=<value optimized out>, __in_chrg=<value optimized out>)
    at /usr/src/debug/kdebase-workspace-4.3.82svn1062329/plasma/generic/dataengines/weather/ions/bbcukmet/ion_bbcukmet.cpp:53
#9  0x00007f5a2ab86b93 in WeatherEngine::triggerReset (this=<value optimized out>) at /usr/src/debug/kdebase-workspace-4.3.82svn1062329/plasma/generic/dataengines/weather/weatherengine.cpp:275
#10 0x00007f5a2ab88be0 in WeatherEngine::qt_metacall (this=0x11e6e30, _c=InvokeMetaMethod, _id=<value optimized out>, _a=0x7fff132b77a0)
    at /usr/src/debug/kdebase-workspace-4.3.82svn1062329/build/plasma/generic/dataengines/weather/weatherengine.moc:93
#11 0x00007f5a4ed2b68f in QMetaObject::activate (sender=0x138cde0, m=<value optimized out>, local_signal_index=<value optimized out>, argv=0x3) at kernel/qobject.cpp:3263
#12 0x00007f5a4ed32e9f in QSingleShotTimer::timerEvent (this=0x138cde0) at kernel/qtimer.cpp:308
#13 0x00007f5a4ed282a3 in QObject::event (this=0x138cde0, e=0x7fff132b7f40) at kernel/qobject.cpp:1203
#14 0x00007f5a4dee362c in QApplicationPrivate::notify_helper(QObject*, QEvent*) () from /usr/lib64/libQtGui.so.4
#15 0x00007f5a4dee9bf6 in QApplication::notify(QObject*, QEvent*) () from /usr/lib64/libQtGui.so.4
#16 0x00007f5a4f2428e6 in KApplication::notify(QObject*, QEvent*) () from /usr/lib64/libkdeui.so.5
#17 0x00007f5a4ed1892c in QCoreApplication::notifyInternal (this=0x664cb0, receiver=0x138cde0, event=0x7fff132b7f40) at kernel/qcoreapplication.cpp:704
#18 0x00007f5a4ed455f5 in sendEvent (event=<value optimized out>, receiver=<value optimized out>) at kernel/qcoreapplication.h:215
#19 QTimerInfoList::activateTimers (event=<value optimized out>, receiver=<value optimized out>) at kernel/qeventdispatcher_unix.cpp:617
#20 0x00007f5a4ed42188 in timerSourceDispatch (source=<value optimized out>) at kernel/qeventdispatcher_glib.cpp:184
#21 idleTimerSourceDispatch (source=<value optimized out>) at kernel/qeventdispatcher_glib.cpp:231
#22 0x00007f5a49fb0f6e in g_main_context_dispatch () from /usr/lib64/libglib-2.0.so.0
#23 0x00007f5a49fb4938 in ?? () from /usr/lib64/libglib-2.0.so.0
#24 0x00007f5a49fb4a60 in g_main_context_iteration () from /usr/lib64/libglib-2.0.so.0
#25 0x00007f5a4ed41e53 in QEventDispatcherGlib::processEvents (this=0x6719f0, flags=<value optimized out>) at kernel/qeventdispatcher_glib.cpp:407
#26 0x00007f5a4df90dbe in ?? () from /usr/lib64/libQtGui.so.4
#27 0x00007f5a4ed17242 in QEventLoop::processEvents (this=<value optimized out>, flags=) at kernel/qeventloop.cpp:149
#28 0x00007f5a4ed1761c in QEventLoop::exec (this=0x7fff132b8290, flags=) at kernel/qeventloop.cpp:201
#29 0x00007f5a4ed1b36b in QCoreApplication::exec () at kernel/qcoreapplication.cpp:981
#30 0x00007f5a42d6c422 in kdemain (argc=<value optimized out>, argv=<value optimized out>) at /usr/src/debug/kdebase-workspace-4.3.82svn1062329/plasma/desktop/shell/main.cpp:112
#31 0x0000000000406fc8 in _start ()

Reported using DrKonqi
Comment 1 Rolf Eike Beer 2009-12-22 17:52:26 UTC
Same here, 32 Bit openSuSE 11.2, both beta 1 and 2.
Comment 2 Shawn Starr 2009-12-23 03:00:28 UTC
Haven't seen this before, still happening in trunk?
Comment 3 Jonathan Thomas 2009-12-27 00:19:52 UTC
*** Bug 220164 has been marked as a duplicate of this bug. ***
Comment 4 Thomas Richard 2009-12-27 11:54:23 UTC
It's still happening for me in beta 2.
It seems only opensuse users are suffering from this issue. Should i take it to their bugtracker?
Comment 5 Dario Andres 2009-12-31 14:49:45 UTC
*** Bug 220795 has been marked as a duplicate of this bug. ***
Comment 6 Jonathan Thomas 2009-12-31 16:38:57 UTC
*** Bug 220820 has been marked as a duplicate of this bug. ***
Comment 7 Jonathan Thomas 2009-12-31 16:40:14 UTC
Just got a dupe from a Kubuntu user, so it's probably not openSUSE-specific.
(Statistics are tricky things...)
Comment 8 Jonathan Thomas 2010-01-05 01:15:05 UTC
*** Bug 221308 has been marked as a duplicate of this bug. ***
Comment 9 Thomas Richard 2010-01-11 10:37:16 UTC
This still happens on RC1. It happens on hibernate instead of suspend and i also noted the same behaviour on a openSUSE 11.2 32 bit system.
Comment 10 Dario Andres 2010-01-20 14:06:32 UTC
*** Bug 223538 has been marked as a duplicate of this bug. ***
Comment 11 Dario Andres 2010-01-20 14:06:45 UTC
*** Bug 222116 has been marked as a duplicate of this bug. ***
Comment 12 Shawn Starr 2010-01-27 06:14:11 UTC
I know, but im not sure what's causing it, yet. This was working before, I need to look into this soon. Patches welcome while I deal with RL issues please.
Comment 13 Anne-Marie Mahfouf 2010-01-27 17:29:29 UTC
*** Bug 224483 has been marked as a duplicate of this bug. ***
Comment 14 Anne-Marie Mahfouf 2010-01-27 17:34:16 UTC
*** Bug 224222 has been marked as a duplicate of this bug. ***
Comment 15 Dario Andres 2010-01-27 23:15:55 UTC
*** Bug 224539 has been marked as a duplicate of this bug. ***
Comment 16 Shawn Starr 2010-01-28 20:17:04 UTC
*** Bug 224330 has been marked as a duplicate of this bug. ***
Comment 17 Dario Andres 2010-01-31 13:33:35 UTC
*** Bug 224985 has been marked as a duplicate of this bug. ***
Comment 18 Aurelien Gateau 2010-02-10 00:06:48 UTC
Created attachment 40626 [details]
New crash information added by DrKonqi

Plasma crashed after resuming from RAM. Crash probably comes from a double delete in reset() and/or UKMETIon destructor. Will send a patch for review.
Comment 19 Aurelien Gateau 2010-02-10 00:47:23 UTC
Patch is here: http://reviewboard.kde.org/r/2868/
Comment 20 Aurelien Gateau 2010-02-10 11:58:26 UTC
SVN commit 1088148 by gateau:

Fix crash on resume from RAM

Clear the forecast vector after items has been deleted

BUG:219036

 M  +14 -17    ion_bbcukmet.cpp  
 M  +1 -0      ion_bbcukmet.h  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1088148
Comment 21 Aurelien Gateau 2010-02-10 11:59:27 UTC
SVN commit 1088149 by gateau:

Fix crash on resume from RAM

Clear the forecast vector after items has been deleted

BUG:219036

 M  +14 -17    ion_bbcukmet.cpp  
 M  +1 -0      ion_bbcukmet.h  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1088149
Comment 22 Sputnik 2010-02-15 10:10:41 UTC
I think this was too late for KDE 4.0 - at least in Kubuntu? Crash is still there. I've also a crash log (http://pastebin.ca/1797082) if wanted.

Application: plasma-desktop (0.3)
KDE Platform Version: 4.4.00 (KDE 4.4.0)
Qt Version: 4.6.1
Operating System: Linux 2.6.31-20-generic i686
Distribution: Ubuntu 9.10
Comment 23 Gaetano 2010-02-23 18:43:18 UTC
Created attachment 41040 [details]
New crash information added by DrKonqi

Plasma crashes while i'm trying to re-connect to my wireless connection.
Comment 24 Jonathan Thomas 2010-02-23 20:26:39 UTC
*** Bug 228231 has been marked as a duplicate of this bug. ***
Comment 25 Jonathan Thomas 2010-02-23 20:27:42 UTC
The fix will arrive with KDE 4.4.1.
Comment 26 Dario Andres 2010-02-27 14:20:26 UTC
*** Bug 228728 has been marked as a duplicate of this bug. ***
Comment 27 Dario Andres 2010-02-27 14:20:51 UTC
*** Bug 221647 has been marked as a duplicate of this bug. ***
Comment 28 Dario Andres 2010-03-03 04:03:56 UTC
*** Bug 229161 has been marked as a duplicate of this bug. ***
Comment 29 Stiliyan Sabchev 2010-03-09 21:34:01 UTC
Created attachment 41489 [details]
New crash information added by DrKonqi

After resuming from suspend to RAM, click on FireFox icon on taskbar and plasma crashed.