Fix crash on resume from RAM

Clear the forecast vector after items has been deleted

BUG:219036

svn path=/trunk/KDE/kdebase/workspace/; revision=1088148