plasma/generic/dataengines/weather/ions/bbcukmet/ion_bbcukmet.h
@@ -170,6 +170,7 @@ private:
 
     QDateTime m_dateFormat;
 
+    void deleteForecasts();
 };
 
 K_EXPORT_PLASMA_DATAENGINE(bbcukmet, UKMETIon)
